2024-04-29T01:20:34Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/8871942594 # 225
* notice: Stats Output Repository: https://github.com/andry81-stats/gh-action--check-os-version--gh-stats/commits?branch=master&time_zone=utc&until=2024-04-29
* notice: last 14d: unq all: 4 8
* notice: prev accum: outdated-unq outdated-all / unq all: 356 736 / 364 745
* notice: next accum: outdated-unq outdated-all / unq all: 357 737 / 364 745
* notice: prev exec diff / last date diff / accum: unq all: +0 +0 -0 -0 / +0 +0 -0 -0 / 0 0
* notice: removed / changed dates: [2024-04-14] / []

2024-04-24T16:22:29Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/8819914501 # 212
* notice: Stats Output Repository: https://github.com/andry81-stats/gh-action--check-os-version--gh-stats/commits?branch=master&time_zone=utc&until=2024-04-24
* notice: last 14d: unq all: 4 9
* notice: prev accum: outdated-unq outdated-all / unq all: 356 736 / 363 743
* notice: next accum: outdated-unq outdated-all / unq all: 356 736 / 364 745
* notice: prev exec diff / last date diff / accum: unq all: +1 +2 -0 -0 / +1 +2 -0 -0 / 1 2
* notice: removed / changed dates: [] / [2024-04-24]

2024-04-18T16:23:26Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/8741401600 # 194
* notice: Stats Output Repository: https://github.com/andry81-stats/gh-action--check-os-version--gh-stats/commits?branch=master&time_zone=utc&until=2024-04-18
* notice: last 14d: unq all: 3 7
* notice: prev accum: outdated-unq outdated-all / unq all: 356 736 / 362 742
* notice: next accum: outdated-unq outdated-all / unq all: 356 736 / 363 743
* notice: prev exec diff / last date diff / accum: unq all: +1 +1 -0 -0 / +2 +2 -0 -0 / 2 2
* notice: removed / changed dates: [] / [2024-04-18]

2024-04-18T08:23:12Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/8734712253 # 193