@@ -1,19 +1,10 @@
 {
-  "timestamp" : "2024-04-29T01:20:34Z",
-  "count_outdated" : 737,
-  "uniques_outdated" : 357,
+  "timestamp" : "2024-04-29T16:23:03Z",
+  "count_outdated" : 738,
+  "uniques_outdated" : 358,
   "count" : 745,
   "uniques" : 364,
   "clones" : [
-    {
-      "timestamp": "2024-04-15T00:00:00Z",
-      "count": 1,
-      "count_minmax": [ 1, 1 ],
-      "count_decinc": [ 0, 1 ],
-      "uniques": 1,
-      "uniques_minmax": [ 1, 1 ],
-      "uniques_decinc": [ 0, 1 ]
-    },
     {
       "timestamp": "2024-04-16T00:00:00Z",
       "count": 1,
