@@ -1,3 +1,12 @@
+2024-04-29T16:23:03Z:
+* notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/8881998503 # 227
+* notice: Stats Output Repository: https://github.com/andry81-stats/gh-action--check-os-version--gh-stats/commits?branch=master&time_zone=utc&until=2024-04-29
+* notice: last 14d: unq all: 4 7
+* notice: prev accum: outdated-unq outdated-all / unq all: 357 737 / 364 745
+* notice: next accum: outdated-unq outdated-all / unq all: 358 738 / 364 745
+* notice: prev exec diff / last date diff / accum: unq all: +0 +0 -0 -0 / +0 +0 -0 -0 / 0 0
+* notice: removed / changed dates: [2024-04-15] / []
+
 2024-04-29T01:20:34Z:
 * notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/8871942594 # 225
 * notice: Stats Output Repository: https://github.com/andry81-stats/gh-action--check-os-version--gh-stats/commits?branch=master&time_zone=utc&until=2024-04-29
